Clean state optimisation step and start to use the new optimisation stage parameters model.
BugzId: 2101, 2012